fix wrong color names

--- a/app/assets/stylesheets/titracka.scss
+++ b/app/assets/stylesheets/titracka.scss
@@ -176,8 +176,8 @@ i.clapse.collapsed:before {
 
 .timeline {
   .listed { color: grey; }
-  .starting { color: dark-green; }
+  .starting { color: darkgreen; }
   .active { color: green; }
-  .landing { color: dark-yellow; }
+  .landing { color: darkorange; }
   .overdue { color: red; }
 }
